infra/setup/installation-pack/k8s-infra/redis.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: central-hub
spec:
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
  selector:
    app: redis
  type: ClusterIP

---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: central-hub
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  serviceName: redis
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:6.2.14-bookworm
          imagePullPolicy: IfNotPresent
          command:
            - redis-server
          args:
            - --requirepass
            - $(REDIS_PASSWORD)
